# coloracao_de_mapas

./: .gitignore  CMakeLists.txt  README.md
include/: gl_wrapper.hpp  mapa.hpp  parser.hpp
input_example/: 001.txt  002.txt  003.txt  004.txt
src/: gl_wrapper.cpp  main.cpp  mapa.cpp  parser.cpp
